--- a/manage.html
+++ b/manage.html
@@ -2,109 +2,94 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>📁 Gestion PNJ Stargate SG-1</title>
+  <title>Gestion PNJ Stargate</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: sans-serif;
+      padding: 2rem;
       max-width: 1000px;
       margin: auto;
-      padding: 1rem;
-      background: #f4f4f4;
+      background: #f9f9f9;
     }
-    h1 {
-      text-align: center;
-      color: #052540;
-    }
+    h1 { text-align: center; color: #052540; }
     .pnj {
       display: flex;
       align-items: center;
-      border-bottom: 1px solid #ddd;
-      padding: 10px;
-      background: #fff;
-      margin-bottom: 8px;
+      background: white;
       border-radius: 8px;
-      box-shadow: 1px 1px 3px #ddd;
+      padding: 10px;
+      margin-bottom: 10px;
+      box-shadow: 0 0 6px rgba(0,0,0,0.05);
     }
-    .pnj img {
+    img {
       width: 100px;
       height: 100px;
       object-fit: cover;
-      margin-right: 15px;
       border-radius: 8px;
+      margin-right: 15px;
     }
-    .pnj-info {
+    .info {
       flex-grow: 1;
     }
-    .pnj-info h2 {
+    .info h2 {
       margin: 0;
-      font-size: 1.1rem;
     }
-    .status {
-      font-weight: bold;
-      font-size: 0.95rem;
-    }
-    .ok { color: green; }
-    .ko { color: red; }
+    .status.ok { color: darkgreen; font-weight: bold; }
+    .status.ko { color: crimson; font-weight: bold; }
   </style>
 </head>
 <body>
-  <h1>Stargate SG-1 · Gestion des visuels PNJs</h1>
-  <p>📦 Source : <code>pnj.json</code> — hébergé sur GitHub CDN</p>
-  <div id="pnj-list">Chargement des données…</div>
+  <h1>📸 Gestion visuelle des PNJ – Stargate SG-1</h1>
+  <div id="pnj-list">Chargement…</div>
 
   <script>
-    const GITHUB_USER = "Albator2570";
-    const REPO_NAME = "stargate-pnj-assets";
-    const pnjJSONPath = `https://cdn.jsdelivr.net/gh/${GITHUB_USER}/${REPO_NAME}/pnj.json?nocache=${Date.now()}`;
-    const BASE_IMG = `https://cdn.jsdelivr.net/gh/${GITHUB_USER}/${REPO_NAME}/`;
+    const repo = "Albator2570/stargate-pnj-assets";
+    const base = `https://cdn.jsdelivr.net/gh/${repo}/`;
+    const pnjUrl = `${base}pnj.json?nocache=${Date.now()}`;
+    const imgDefault = `${base}default.png`;
 
-    fetch(pnjJSONPath)
-      .then(resp => resp.json())
-      .then(data => {
+    fetch(pnjUrl)
+      .then(r => r.json())
+      .then(json => {
         const container = document.getElementById("pnj-list");
         container.innerHTML = "";
-
-        Object.entries(data).forEach(([nom, info]) => {
+        Object.entries(json).forEach(([nom, data]) => {
           const div = document.createElement("div");
           div.className = "pnj";
 
-          // Image
           const img = document.createElement("img");
-          const url = info.image_url || BASE_IMG + "default.png";
-
-          img.src = url;
+          img.src = data.image_url || imgDefault;
+          img.alt = nom;
           img.onerror = () => {
-            img.src = BASE_IMG + "default.png";
+            console.error(`❌ Image cassée pour ${nom} → ${img.src}`);
+            img.src = imgDefault;
           };
 
-          img.title = nom;
+          const info = document.createElement("div");
+          info.className = "info";
 
-          // Texte
-          const block = document.createElement("div");
-          block.className = "pnj-info";
+          const h2 = document.createElement("h2");
+          h2.innerText = nom;
 
-          const titre = document.createElement("h2");
-          titre.innerText = nom;
-
-          const msg = document.createElement("div");
-          msg.className = "status";
-
-          if (!url.includes("default.png")) {
-            msg.innerText = "✅ Image ok";
-            msg.classList.add("ok");
+          const stat = document.createElement("div");
+          if (!data.image_url || data.image_url.toLowerCase().includes("default")) {
+            stat.innerText = "🚫 Pas d’image";
+            stat.className = "status ko";
           } else {
-            msg.innerText = "🚫 Pas d'image";
-            msg.classList.add("ko");
+            stat.innerText = "✅ Image OK";
+            stat.className = "status ok";
           }
 
-          block.append(titre, msg);
-          div.append(img, block);
-          container.append(div);
+          info.appendChild(h2);
+          info.appendChild(stat);
+          div.appendChild(img);
+          div.appendChild(info);
+          container.appendChild(div);
         });
       })
       .catch(err => {
-        document.getElementById("pnj-list").innerHTML = "💥 Erreur de chargement du fichier pnj.json";
-        console.error(err);
+        console.error("Erreur chargement pnj.json :", err);
+        document.getElementById("pnj-list").innerText = "⚠️ Erreur de chargement du fichier.";
       });
   </script>
 </body>
